[package]
name = "monal-rust-swift-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
swift-bridge = "0.1"
sdp-to-jingle = { path = "../sdp-to-jingle" }
monal-panic-handler = { path = "../monal-panic-handler" }


[build-dependencies]
swift-bridge-build = "0.1"

[dev-dependencies]
swift-bridge-build = "0.1"
