[package]
name = "sdp-to-jingle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
serde = {version = "1.0"}
serde_derive = {version = "1.0"}
quick-xml = { version = "0.31.0", features = ["serialize", "overlapped-lists"] }

webrtc-sdp = {version = "0.3.10", features = ["serialize"] }
